feat: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,20 +4,10 @@
   "zi-zhu": "Autonomous",
   "mo-ban": "Template",
   "ting-zhi": "Stop",
-  "bao-cun": "Save",
   "ding-shi-ren-wu": "Scheduled tasks",
-  "hou-deng": "Rear light",
   "ji-guang-fa-san-qi": "Laser diffuser",
-  "lu-jing-gui-hua": "Route Planning",
-  "qian-deng": "Head light",
-  "qu-xiao": "Cancel",
-  "sou-suo": "Search",
-  "xia-fa": "Issue",
-  "xin-jian": "Create",
   "yu-yin": "Voice",
   "jie-shu": "End.",
-  "fan-hang": "Return",
-  "kai-shi": "begin/start",
   "qing-kong": "Clear",
   "shan-chu": "Delete",
   "tiao-shi": "Debugging",
@@ -77,7 +67,6 @@
   "qing-shu-ru-ming-cheng": "Please enter the name.",
   "qu-xiao-guan-lian": "Cancel association",
   "que-ding": "Confirm",
-  "she-bei-bian-hao": "Device number",
   "she-xiang-tou-ming-cheng": "Camera Name",
   "tian-jia": "Add/Adding.",
   "wai-she-lei-xing": "Peripheral type",
@@ -127,7 +116,6 @@
   "qing-xuan-ze-kong-zhi-qi-lei-xing": "Please select the controller type.",
   "wai-she-zhuang-tai-0": "Peripheral status",
   "che-liang-su-du": "vehicle speed",
-  "che-su": "speed",
   "lu-jing-dian-jing-wei-du-zuo-biao": "Path point latitude and longitude coordinates",
   "pei-zhi-lu-jing-dian-ren-wu": "Configure waypoint tasks",
   "qing-she-zhi-che-liang-su-du": "Please set vehicle speed",
@@ -136,7 +124,6 @@
   "ren-wu-dian": "Mission point",
   "ren-wu-lei-xing": "Task type",
   "she-xiang-tou-zhuan-dong-jiao-du": "Camera rotation angle",
-  "she-zhi-lu-duan-che-su": "Set road segment speed",
   "ting-liu-shi-jian-s": "Residence time/S",
   "yi-jian-ding-wei": "One click positioning",
   "jin-guang-deng": "Low beam lights",
@@ -145,7 +132,6 @@
   "bao-cun-lu-xian": "Save route",
   "jie-shu-lu-zhi": "End recording",
   "lu-zhi-lu-xian": "Record route",
-  "sou-suo-mo-ban": "Search template",
   "xin-jian-lu-xian": "Create new route",
   "shi-pin-qie-huan": "Video switching",
   "qing-xian-jie-shu-lu-zhi": "Please end recording first",
@@ -169,7 +155,6 @@
   "xin-jian-ren-wu": "Create new task",
   "yi-jie-shu-lu-zhi-qing-bao-cun-lu-xian": "Recording has ended, please save the route!",
   "yu-yan": "language",
-  "li-shi": "history",
   "zhu-ti": "theme",
   "ji-qi-ren-code": "Robot code",
   "lu-xian": "route",
@@ -181,7 +166,6 @@
   "xun-luo-jie-shu-shi-jian": "Patrol end time",
   "xun-luo-kai-shi-shi-jian": "Patrol start time",
   "qing-kong-lu-xian": "Clear route",
-  "xun-luo-lu-xian": "patrol route",
   "wan-cheng": "Complete",
   "wei-wan-cheng": "Incomplete",
   "pu-tong-ren-wu": "Regular tasks",
@@ -205,7 +189,6 @@
   "zui-jin-yi-zhou": "last week",
   "xun-luo-ren-wu-ci-shu": "Number of patrol missions",
   "ren-yuan-ru-qin": "personal intrusion",
-  "shang-ge-shi-jian-duan-yi-chang-zong-shu": "Total number of exceptions in the previous time period",
   "tie-si-wang-shi-bie": "Barbed wire identification",
   "wu-ren-zhi-ban": "No one on duty",
   "yi-chang-qing-kuang": "abnormal situation",
@@ -226,5 +209,8 @@
   "zhao-du-ji": "Illuminometer",
   "xuan-ze-lu-xian-wen-jian": "Select route file",
   "shang-chuan-lu-xian": "Upload route",
-  "dang-qian-yi-chang-shu": "Current number of exceptions"
+  "dang-qian-yi-chang-shu": "Current number of exceptions",
+  "cao-kong-duan": "Control end",
+  "shou-ye-fen-xi": "Home page analysis",
+  "tui-chu-deng-lu": "sign out"
 }
