--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,20 +4,10 @@
   "zi-zhu": "Autonomie",
   "mo-ban": "Modèle",
   "ting-zhi": "Arrêtez",
-  "bao-cun": "sauvegarder",
   "ding-shi-ren-wu": "Tâche planifiée",
-  "hou-deng": "Feux arrière",
   "ji-guang-fa-san-qi": "Divergent de laser",
-  "lu-jing-gui-hua": "Planification d'itinéraire",
-  "qian-deng": "Phare avant",
-  "qu-xiao": "Annuler",
-  "sou-suo": "recherche",
-  "xia-fa": "Émettre",
-  "xin-jian": "Nouvelle construction",
   "yu-yin": "Voix",
   "jie-shu": "Fin.",
-  "fan-hang": "Retourner au port",
-  "kai-shi": "commencer",
   "qing-kong": "Vider",
   "shan-chu": "Supprimer",
   "tiao-shi": "Déboguer",
@@ -77,7 +67,6 @@
   "qing-shu-ru-ming-cheng": "Veuillez saisir un nom.",
   "qu-xiao-guan-lian": "Dissocier",
   "que-ding": "Déterminer",
-  "she-bei-bian-hao": "Numéro d'équipement",
   "she-xiang-tou-ming-cheng": "Nom de la caméra.",
   "tian-jia": "Ajouter",
   "wai-she-lei-xing": "Types de périphériques externes",
@@ -127,7 +116,6 @@
   "qing-xuan-ze-kong-zhi-qi-lei-xing": "Veuillez sélectionner le type de contrôleur",
   "wai-she-zhuang-tai-0": "État du périphérique externe",
   "che-liang-su-du": "Vitesse du véhicule",
-  "che-su": "vitesse",
   "lu-jing-dian-jing-wei-du-zuo-biao": "Coordonnées de latitude et de longitude du point de chemin",
   "pei-zhi-lu-jing-dian-ren-wu": "Configurer les tâches de waypoint",
   "qing-she-zhi-che-liang-su-du": "Veuillez régler la vitesse du véhicule",
@@ -136,7 +124,6 @@
   "ren-wu-dian": "point de mission",
   "ren-wu-lei-xing": "Type de tâche",
   "she-xiang-tou-zhuan-dong-jiao-du": "Angle de rotation de la caméra",
-  "she-zhi-lu-duan-che-su": "Définir la vitesse du segment de route",
   "ting-liu-shi-jian-s": "Temps de séjour/S",
   "yi-jian-ding-wei": "Positionnement en un clic",
   "jin-guang-deng": "Feux de croisement",
@@ -145,7 +132,6 @@
   "bao-cun-lu-xian": "enregistrer l'itinéraire",
   "jie-shu-lu-zhi": "Terminer l'enregistrement",
   "lu-zhi-lu-xian": "Enregistrer l'itinéraire",
-  "sou-suo-mo-ban": "Modèle de recherche",
   "xin-jian-lu-xian": "Créer un nouvel itinéraire",
   "shi-pin-qie-huan": "Commutation vidéo",
   "qing-xian-jie-shu-lu-zhi": "Veuillez d'abord terminer l'enregistrement",
@@ -168,7 +154,6 @@
   "xin-jian-fan-hang-lu-xian": "Créer un nouvel itinéraire de retour",
   "xin-jian-ren-wu": "Créer une nouvelle tâche",
   "yi-jie-shu-lu-zhi-qing-bao-cun-lu-xian": "L'enregistrement est terminé, veuillez sauvegarder l'itinéraire !",
-  "li-shi": "histoire",
   "yu-yan": "langue",
   "zhu-ti": "thème",
   "ji-qi-ren-code": "Code des robots",
@@ -181,7 +166,6 @@
   "xun-luo-jie-shu-shi-jian": "Heure de fin de la patrouille",
   "xun-luo-kai-shi-shi-jian": "Heure de début de la patrouille",
   "qing-kong-lu-xian": "itinéraire dégagé",
-  "xun-luo-lu-xian": "itinéraire de patrouille",
   "wan-cheng": "Terminé",
   "wei-wan-cheng": "Pas terminé",
   "pu-tong-ren-wu": "Tâches ordinaires",
@@ -205,7 +189,6 @@
   "zui-jin-yi-zhou": "la semaine dernière",
   "xun-luo-ren-wu-ci-shu": "Nombre de missions de patrouille",
   "ren-yuan-ru-qin": "intrusion personnelle",
-  "shang-ge-shi-jian-duan-yi-chang-zong-shu": "Nombre total d'exceptions au cours de la période précédente",
   "tie-si-wang-shi-bie": "Identification des barbelés",
   "wu-ren-zhi-ban": "Personne de service",
   "yi-chang-qing-kuang": "situation anormale",
@@ -226,5 +209,8 @@
   "zhao-du-ji": "Illuminomètre",
   "xuan-ze-lu-xian-wen-jian": "Sélectionnez le fichier d'itinéraire",
   "shang-chuan-lu-xian": "Télécharger l'itinéraire",
-  "dang-qian-yi-chang-shu": "Nombre actuel d'exceptions"
+  "dang-qian-yi-chang-shu": "Nombre actuel d'exceptions",
+  "cao-kong-duan": "Fin du contrôle",
+  "shou-ye-fen-xi": "Analyse de la page d'accueil",
+  "tui-chu-deng-lu": "se déconnecter"
 }
