--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -3,21 +3,11 @@
   "shou-dong": "手动",
   "zi-zhu": "自主",
   "mo-ban": "模板",
-  "xin-jian": "新建",
-  "bao-cun": "保存",
-  "sou-suo": "搜索",
-  "qu-xiao": "取消",
-  "lu-jing-gui-hua": "路径规划",
-  "xia-fa": "下发",
   "ding-shi-ren-wu": "定时任务",
-  "qian-deng": "前灯",
-  "hou-deng": "后灯",
   "yu-yin": "语音",
   "ting-zhi": "停止",
   "ji-guang-fa-san-qi": "激光发散器",
   "qing-kong": "清空",
-  "fan-hang": "返航",
-  "kai-shi": "开始",
   "jie-shu": "结束",
   "xian-xin-jian-lu-jing": "先新建路径",
   "xian-xin-jian-fan-hang-lu-jing": "先新建返航路径",
@@ -75,7 +65,6 @@
   "bian-ji": "编辑",
   "qu-xiao-guan-lian": "取消关联",
   "guan-lian": "关联",
-  "she-bei-bian-hao": "设备编号",
   "wai-she-ming-cheng": "外设名称",
   "wai-she-lei-xing": "外设类型",
   "wai-she-zhuang-tai": "外设状态",
@@ -134,8 +123,6 @@
   "lu-jing-dian-jing-wei-du-zuo-biao": "路径点经纬度坐标",
   "ting-liu-shi-jian-s": "停留时间/S",
   "yi-jian-ding-wei": "一键定位",
-  "she-zhi-lu-duan-che-su": "设置路段车速",
-  "che-su": "车速",
   "ren-wu-lei-xing": "任务类型",
   "che-liang-su-du": "车辆速度",
   "qing-she-zhi-che-liang-su-du": "请设置车辆速度",
@@ -144,7 +131,6 @@
   "zi-dong-yuan-guang-deng": "自动远光灯",
   "xin-jian-lu-xian": "新建路线",
   "bao-cun-lu-xian": "保存路线",
-  "sou-suo-mo-ban": "搜索模板",
   "lu-zhi-lu-xian": "录制路线",
   "jie-shu-lu-zhi": "结束录制",
   "shi-pin-qie-huan": "视频切换",
@@ -169,7 +155,6 @@
   "lu-xian-hui-zhi": "路线绘制",
   "xia-fa-ren-wu": "下发任务",
   "yu-yan": "语言",
-  "li-shi": "历史",
   "zhu-ti": "主题",
   "lu-xian-mo-ban": "路线模板",
   "xun-luo-ren-wu": "巡逻任务",
@@ -181,7 +166,6 @@
   "xun-luo-jie-shu-shi-jian": "巡逻结束时间",
   "ren-wu-zhuang-tai": "任务状态",
   "qing-kong-lu-xian": "清空路线",
-  "xun-luo-lu-xian": "巡逻路线",
   "wan-cheng": "完成",
   "wei-wan-cheng": "未完成",
   "pu-tong-ren-wu": "普通任务",
@@ -205,7 +189,6 @@
   "zui-jin-san-nian": "最近三年",
   "xun-luo-ren-wu-ci-shu": "巡逻任务次数",
   "yi-chang-zong-shu": "异常总数",
-  "shang-ge-shi-jian-duan-yi-chang-zong-shu": "上个时间段异常总数",
   "yi-chang-qing-kuang": "异常情况",
   "tie-si-wang-shi-bie": "铁丝网识别",
   "ren-yuan-ru-qin": "人员入侵",
@@ -226,5 +209,8 @@
   "shang-chuan-cheng-gong": "上传成功",
   "xuan-ze-lu-xian-wen-jian": "选择路线文件",
   "shang-chuan-lu-xian": "上传路线",
-  "dang-qian-yi-chang-shu": "当前异常数"
+  "dang-qian-yi-chang-shu": "当前异常数",
+  "shou-ye-fen-xi": "首页分析",
+  "tui-chu-deng-lu": "退出登录",
+  "cao-kong-duan": "操控端"
 }
