feat: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -178,8 +178,6 @@
   "an-tian-cha-xun": "Query by day",
   "an-yue-cha-xun": "Query by month",
   "an-zhou-cha-xun": "Query by week",
-  "qing-xuan-ze-jie-shu-shi-jian": "Please select end time",
-  "qing-xuan-ze-kai-shi-shi-jian": "Please select a start time",
   "qing-xuan-ze-shi-jian": "Please select a time",
   "zui-jin-san-ge-yue": "last three months",
   "zui-jin-san-nian": "The last three years",
@@ -193,15 +191,10 @@
   "wu-ren-zhi-ban": "No one on duty",
   "yi-chang-qing-kuang": "abnormal situation",
   "yi-chang-shu": "Abnormal number",
-  "yi-chang-zong-shu": "Total number of exceptions",
   "shang-ge-shi-jian-duan": "last time period",
   "shang-nian": "Last year",
   "shang-yue": "last month",
   "shang-zhou": "last week",
-  "xun-luo-ci-shu-zhe-xian-tu": "Line chart of patrol times",
-  "yi-chang-qing-kuang-dui-bi-qu-shi-tu": "Abnormal situation comparison trend chart",
-  "yi-chang-qing-kuang-lei-xing-zhan-bi-tu": "Exception type proportion chart",
-  "yi-chang-qing-kuang-zhu-zhuang-tu": "Exception histogram",
   "zuo-tian": "yesterday",
   "shang-chuan-cheng-gong": "Upload successful",
   "shang-chuan-wen-jian": "upload files",
@@ -209,8 +202,11 @@
   "zhao-du-ji": "Illuminometer",
   "xuan-ze-lu-xian-wen-jian": "Select route file",
   "shang-chuan-lu-xian": "Upload route",
-  "dang-qian-yi-chang-shu": "Current number of exceptions",
   "cao-kong-duan": "Control end",
   "shou-ye-fen-xi": "Home page analysis",
-  "tui-chu-deng-lu": "sign out"
+  "tui-chu-deng-lu": "sign out",
+  "xun-luo-ci-shu-qing-kuang": "Number of patrols",
+  "yi-chang-qing-kuang-dui-bi": "Comparison of abnormal situations",
+  "yi-chang-qing-kuang-lei-xing-dui-bi": "Comparison of exception types",
+  "yi-chang-qing-kuang-lei-xing-zhan-bi": "Proportion of exception types"
 }
