--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -174,8 +174,6 @@
   "zhong-zhi": "重置",
   "cha-kan-geng-duo": "查看更多",
   "qing-xuan-ze-shi-jian": "请选择时间",
-  "qing-xuan-ze-kai-shi-shi-jian": "请选择开始时间",
-  "qing-xuan-ze-jie-shu-shi-jian": "请选择结束时间",
   "an-nian-cha-xun": "按年查询",
   "an-yue-cha-xun": "按月查询",
   "an-zhou-cha-xun": "按周查询",
@@ -188,16 +186,11 @@
   "zui-jin-yi-nian": "最近一年",
   "zui-jin-san-nian": "最近三年",
   "xun-luo-ren-wu-ci-shu": "巡逻任务次数",
-  "yi-chang-zong-shu": "异常总数",
   "yi-chang-qing-kuang": "异常情况",
   "tie-si-wang-shi-bie": "铁丝网识别",
   "ren-yuan-ru-qin": "人员入侵",
   "wu-ren-zhi-ban": "无人值班",
   "yi-chang-shu": "异常数",
-  "xun-luo-ci-shu-zhe-xian-tu": "巡逻次数折线图",
-  "yi-chang-qing-kuang-zhu-zhuang-tu": "异常情况柱状图",
-  "yi-chang-qing-kuang-dui-bi-qu-shi-tu": "异常情况对比趋势图",
-  "yi-chang-qing-kuang-lei-xing-zhan-bi-tu": "异常情况类型占比图",
   "shang-nian": "上年",
   "shang-zhou": "上周",
   "shang-yue": "上月",
@@ -209,8 +202,11 @@
   "shang-chuan-cheng-gong": "上传成功",
   "xuan-ze-lu-xian-wen-jian": "选择路线文件",
   "shang-chuan-lu-xian": "上传路线",
-  "dang-qian-yi-chang-shu": "当前异常数",
   "shou-ye-fen-xi": "首页分析",
   "tui-chu-deng-lu": "退出登录",
-  "cao-kong-duan": "操控端"
+  "cao-kong-duan": "操控端",
+  "xun-luo-ci-shu-qing-kuang": "巡逻次数情况",
+  "yi-chang-qing-kuang-lei-xing-dui-bi": "异常情况类型对比",
+  "yi-chang-qing-kuang-dui-bi": "异常情况对比",
+  "yi-chang-qing-kuang-lei-xing-zhan-bi": "异常情况类型占比"
 }
