--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -178,8 +178,6 @@
   "an-tian-cha-xun": "Requête par jour",
   "an-yue-cha-xun": "Requête par mois",
   "an-zhou-cha-xun": "Requête par semaine",
-  "qing-xuan-ze-jie-shu-shi-jian": "Veuillez sélectionner l'heure de fin",
-  "qing-xuan-ze-kai-shi-shi-jian": "Veuillez sélectionner une heure de début",
   "qing-xuan-ze-shi-jian": "Veuillez sélectionner une heure",
   "zui-jin-san-ge-yue": "les trois derniers mois",
   "zui-jin-san-nian": "Les trois dernières années",
@@ -193,15 +191,10 @@
   "wu-ren-zhi-ban": "Personne de service",
   "yi-chang-qing-kuang": "situation anormale",
   "yi-chang-shu": "Numéro anormal",
-  "yi-chang-zong-shu": "Nombre total d'exceptions",
   "shang-ge-shi-jian-duan": "dernière période",
   "shang-nian": "L'année dernière",
   "shang-yue": "le mois dernier",
   "shang-zhou": "la semaine dernière",
-  "xun-luo-ci-shu-zhe-xian-tu": "Graphique linéaire des temps de patrouille",
-  "yi-chang-qing-kuang-dui-bi-qu-shi-tu": "Tableau de tendance de comparaison des situations anormales",
-  "yi-chang-qing-kuang-lei-xing-zhan-bi-tu": "Tableau des proportions de type d'exception",
-  "yi-chang-qing-kuang-zhu-zhuang-tu": "Histogramme des exceptions",
   "zuo-tian": "hier",
   "shang-chuan-cheng-gong": "Téléchargement réussi",
   "shang-chuan-wen-jian": "télécharger des fichiers",
@@ -209,8 +202,11 @@
   "zhao-du-ji": "Illuminomètre",
   "xuan-ze-lu-xian-wen-jian": "Sélectionnez le fichier d'itinéraire",
   "shang-chuan-lu-xian": "Télécharger l'itinéraire",
-  "dang-qian-yi-chang-shu": "Nombre actuel d'exceptions",
   "cao-kong-duan": "Fin du contrôle",
   "shou-ye-fen-xi": "Analyse de la page d'accueil",
-  "tui-chu-deng-lu": "se déconnecter"
+  "tui-chu-deng-lu": "se déconnecter",
+  "xun-luo-ci-shu-qing-kuang": "Nombre de patrouilles",
+  "yi-chang-qing-kuang-dui-bi": "Comparaison de situations anormales",
+  "yi-chang-qing-kuang-lei-xing-dui-bi": "Comparaison des types d'exceptions",
+  "yi-chang-qing-kuang-lei-xing-zhan-bi": "Proportion de types d'exceptions"
 }
