--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -213,8 +213,13 @@
   "bu-zuo-chu-li": "No processing",
   "jing-bao-xiang-qing": "Alert details",
   "shou-dong-chu-li": "Manual processing",
-  "shou-ye-fen-xi": "Home page analysis",
   "qie-huan-cheng-gong": "Switch successful",
   "zi-zhu-jie-suo": "Autonomous unlocking",
-  "ting-zhi-shang-suo": "Stop locking"
+  "ting-zhi-shang-suo": "Stop locking",
+  "bao-cun-fan-hang-lu-xian-chu-cuo": "Error saving return route",
+  "qing-cong-lu-xian-dian-kai-shi-hui-zhi": "Please start drawing from the route point!",
+  "qing-shang-chuan-zheng-que-de-lu-xian-wen-jian": "Please upload the correct route file",
+  "she-zhi-wei-fan-hang-dian": "Set as home point",
+  "she-zhi-wei-ren-wu-dian": "Set as mission point",
+  "shou-ye-fen-xi": "Home page analysis"
 }
