--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -213,8 +213,13 @@
   "bu-zuo-chu-li": "Aucun traitement",
   "jing-bao-xiang-qing": "Détails de l'alerte",
   "shou-dong-chu-li": "Traitement manuel",
-  "shou-ye-fen-xi": "Analyse de la page d'accueil",
   "qie-huan-cheng-gong": "Switch avec succès",
   "zi-zhu-jie-suo": "Déverrouillage autonome",
-  "ting-zhi-shang-suo": "Arrêter de verrouiller"
+  "ting-zhi-shang-suo": "Arrêter de verrouiller",
+  "bao-cun-fan-hang-lu-xian-chu-cuo": "Erreur lors de l'enregistrement de l'itinéraire de retour",
+  "qing-cong-lu-xian-dian-kai-shi-hui-zhi": "Veuillez commencer à dessiner à partir du point d'itinéraire !",
+  "qing-shang-chuan-zheng-que-de-lu-xian-wen-jian": "Veuillez télécharger le fichier d'itinéraire correct",
+  "she-zhi-wei-fan-hang-dian": "Définir comme point d'origine",
+  "she-zhi-wei-ren-wu-dian": "Définir comme point de mission",
+  "shou-ye-fen-xi": "Analyse de la page d'accueil"
 }
