--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -213,8 +213,13 @@
   "shou-dong-chu-li": "手动处理",
   "bu-zuo-chu-li": "不作处理",
   "jing-bao-xiang-qing": "警报详情",
-  "shou-ye-fen-xi": "首页分析",
   "qie-huan-cheng-gong": "切换成功",
   "zi-zhu-jie-suo": "自主解锁",
-  "ting-zhi-shang-suo": "停止上锁"
+  "ting-zhi-shang-suo": "停止上锁",
+  "qing-shang-chuan-zheng-que-de-lu-xian-wen-jian": "请上传正确的路线文件",
+  "she-zhi-wei-ren-wu-dian": "设置为任务点",
+  "she-zhi-wei-fan-hang-dian": "设置为返航点",
+  "qing-cong-lu-xian-dian-kai-shi-hui-zhi": "请从路线点开始绘制！",
+  "bao-cun-fan-hang-lu-xian-chu-cuo": "保存返航路线出错",
+  "shou-ye-fen-xi": "首页分析"
 }
