feat: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -223,5 +223,6 @@
   "shou-ye-fen-xi": "Home page analysis",
   "hua-mian": "Frame",
   "cha-kan-jing-bao-xiang-qing": "View alert details",
-  "jing-bao": "Alarm"
+  "jing-bao": "Alarm",
+  "qu-xiao-fan-hang-lu-xian-hui-zhi": "Cancel the drawing of the return route"
 }
