--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -223,5 +223,6 @@
   "shou-ye-fen-xi": "Analyse de la page d'accueil",
   "hua-mian": "Image",
   "cha-kan-jing-bao-xiang-qing": "Voir les détails de l'alerte",
-  "jing-bao": "Alarmes"
+  "jing-bao": "Alarmes",
+  "qu-xiao-fan-hang-lu-xian-hui-zhi": "Annuler le tracé de l'itinéraire de retour"
 }
