feat: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -224,5 +224,6 @@
   "hua-mian": "Frame",
   "cha-kan-jing-bao-xiang-qing": "View alert details",
   "jing-bao": "Alarm",
-  "qu-xiao-fan-hang-lu-xian-hui-zhi": "Cancel the drawing of the return route"
+  "qu-xiao-fan-hang-lu-xian-hui-zhi": "Cancel the drawing of the return route",
+  "lu-xian-dian": "route point"
 }
