--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -224,5 +224,6 @@
   "hua-mian": "Image",
   "cha-kan-jing-bao-xiang-qing": "Voir les détails de l'alerte",
   "jing-bao": "Alarmes",
-  "qu-xiao-fan-hang-lu-xian-hui-zhi": "Annuler le tracé de l'itinéraire de retour"
+  "qu-xiao-fan-hang-lu-xian-hui-zhi": "Annuler le tracé de l'itinéraire de retour",
+  "lu-xian-dian": "point d'itinéraire"
 }
