--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -224,5 +224,6 @@
   "hua-mian": "画面",
   "cha-kan-jing-bao-xiang-qing": "查看警报详情",
   "jing-bao": "警报",
-  "qu-xiao-fan-hang-lu-xian-hui-zhi": "取消返航路线绘制"
+  "qu-xiao-fan-hang-lu-xian-hui-zhi": "取消返航路线绘制",
+  "lu-xian-dian": "路线点"
 }
