--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -241,5 +241,6 @@
   "duan-kou": "端口",
   "pin-pai": "品牌",
   "kai-qi": "开启",
-  "guan-bi": "关闭"
+  "guan-bi": "关闭",
+  "yi-kai-shi-lu-zhi-zhong": "已开始录制中"
 }
