feat: 选择摄像头后自动推流并获取拉流地址

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -241,5 +241,6 @@
   "qing-shu-ru-mi-ma": "Please enter password",
   "qing-shu-ru-zhang-hao": "Please input Username",
   "guan-bi": "closure",
-  "kai-qi": "turn on"
+  "kai-qi": "turn on",
+  "rtsp-di-zhi": "rtsp address"
 }
