--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -241,5 +241,6 @@
   "qing-shu-ru-mi-ma": "Veuillez entrer le mot de passe",
   "qing-shu-ru-zhang-hao": "Veuillez saisir votre nom d'utilisateur",
   "guan-bi": "fermeture",
-  "kai-qi": "allumer"
+  "kai-qi": "allumer",
+  "rtsp-di-zhi": "adresse RTSP"
 }
