feat: 视频增加手动刷新

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -242,5 +242,6 @@
   "qing-shu-ru-zhang-hao": "Please input Username",
   "guan-bi": "closure",
   "kai-qi": "turn on",
-  "rtsp-di-zhi": "rtsp address"
+  "rtsp-di-zhi": "rtsp address",
+  "shua-xin": "refresh"
 }
