--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -242,5 +242,6 @@
   "qing-shu-ru-zhang-hao": "Veuillez saisir votre nom d'utilisateur",
   "guan-bi": "fermeture",
   "kai-qi": "allumer",
-  "rtsp-di-zhi": "adresse RTSP"
+  "rtsp-di-zhi": "adresse RTSP",
+  "shua-xin": "rafraîchir"
 }
