--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -242,5 +242,6 @@
   "pin-pai": "品牌",
   "kai-qi": "开启",
   "guan-bi": "关闭",
-  "rtsp-di-zhi": "rtsp 地址"
+  "rtsp-di-zhi": "rtsp 地址",
+  "shua-xin": "刷新"
 }
